logs/swipt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swipt'...
Listing './lib/python3.5/site-packages/swipt/people'...
Compiling './lib/python3.5/site-packages/swipt/people/jaime.py'...
***   File "./lib/python3.5/site-packages/swipt/people/jaime.py", line 7
    print 'Para las aventuras que puedan acontecerte:'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/swipt/people/jessi.py'...
***   File "./lib/python3.5/site-packages/swipt/people/jessi.py", line 32
    print 'Jessi {0} Teles {0} Redir. {0} Pedro'.format(' '*16)
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swipt/people/mario.py'...
***   File "./lib/python3.5/site-packages/swipt/people/mario.py", line 75
    print 'Muchisimas gracias por las horas de trabajo'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/swipt/people/miguel.py'...
***   File "./lib/python3.5/site-packages/swipt/people/miguel.py", line 20
    print list_question_response[i][0]
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/swipt-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
